syntax = "proto3";

package example;

option go_package = "github.com/travix/gotf-example/pb";

import "gotf.proto";

message ProviderModel {
  option (gotf.provider) = {
    name: "example"
  };
  string endpoint = 1 [(gotf.attribute) = { must_be: Required }];
}

// terraform resource
message User {
  option (gotf.resource) = {
    client: "UserServiceClient",
    // client: "GroupService", // multiple clients can be specified
  };
  string username = 1 [(gotf.attribute) = { must_be: Required }];
  string email = 2 [(gotf.attribute) = { must_be: Optional }]; // user email address
}

// terraform datasource
message Users {
  option (gotf.datasource) = {client: "UserServiceClient"};
  repeated User users = 1;
}

// terraform resource
message Group {
  option (gotf.resource) = {explicit_fields: true, client: "GroupServiceClient", client: "UserServiceClient"};
  string name = 1 [(gotf.attribute) = { must_be: Required }];
  optional string email = 2 [(gotf.attribute) = { must_be: Optional }]; // group email address
  User maintainer = 3; // this will be skipped in provider
  repeated User users = 4; // this will be skipped in provider
  repeated string users_names = 5 [(gotf.attribute) = { name: "users", must_be: Optional }];
}

// terraform datasource
message Groups {
  option (gotf.datasource) = {client: "GroupServiceClient"};
  repeated Group groups = 1;
}

message GetUserRequest {
  string username = 1;
}

message GetGroupRequest {
  string name = 1;
}

message Empty {
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(User) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(User) returns (Empty);
  rpc ListUsers(Empty) returns (Users);
}

service GroupService {
  rpc GetGroup(GetGroupRequest) returns (Group);
  rpc CreateGroup(Group) returns (Group);
  rpc UpdateGroup(Group) returns (Group);
  rpc DeleteGroup(Group) returns (Empty);
  rpc ListGroups(Empty) returns (Groups);
}
